macros/tests/trybuild/no_deserialize.stderr
error: cannot find attribute `serde` in this scope
 --> tests/trybuild/no_deserialize.rs:3:1
  |
3 | #[help]
  | ^^^^^^^
  |
  = note: `serde` is in scope, but it is a crate, not an attribute
  = note: this error originates in the attribute macro `help` (in Nightly builds, run with -Z macro-backtrace for more info)
